...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bar.MainActivity">

    <item
        android:id="@+id/undoButton"
        android:icon="@drawable/ic_undo_black_24dp"
        android:title="@string/undo_button"
        app:showAsAction="always" />

    <item
        android:id="@+id/redoButton"
        android:icon="@drawable/ic_redo_black_24dp"
        android:title="@string/redo_button"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/strokeWidthChooserButton"
        android:title="@string/stroke_width_display"
        app:showAsAction="always" />

    <item
        android:id="@+id/lineTypeChooserButton"
        android:icon="@drawable/ic_remove_black_24dp"
        android:title="@string/lineTypeChooserButton"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/toolChooserButton"
        android:icon="@drawable/ic_point_icon"
        android:title="@string/toolChooserButton"
        app:showAsAction="always" />

    <item
        android:id="@+id/colorChooserButton"
        android:icon="@drawable/ic_color_lens_black_24dp"
        android:title="@string/colorChooserButton"
        app:showAsAction="always" />

    <item
        android:id="@+id/saveButton"
...
