<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/strokeWidthChooserMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleStrokeWidth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="15dp"
        android:text="@string/stroke_width"
        />

    <SeekBar
        android:id="@+id/strokeWidth"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:max="50"
        android:progress="5"
        />
</LinearLayout>

