...
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp">


        <Button
            android:id="@+id/yellowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/yellow"
            android:onClick="chooseNewColor"
...
