...
    <string name="toolChooserButton">Choose Drawing Tool</string>
    <string name="colorChooserButton">Choose Color for Drawing Tool</string>
    <string name="saveButton">Save current drawing</string>
    <string name="shapeChooserFragment">Choose Shape</string>
    <string name="stickerChooserFragment">Choose Sticker</string>
    <string name="insertTextFragment">Insert Text</string>
    <string name="drawPointButton">Point</string>
    <string name="drawLineButton">Line</string>
    <string name="drawFillButton">Fill</string>
    <string name="drawSprayCan">Spray Can</string>
    <string name="eraserButton">Eraser</string>
    <string name="drawShapesButton">Shapes</string>
    <string name="drawTextButton">Text</string>
    <string name="drawCameraPicture">Camera</string>
...
